--- a/index.html
+++ b/index.html
@@ -119,24 +119,79 @@
 
     <!-- mid section -->
     <div class="container-fluid">
-      <div class="row d-flex justify-content-end">
-        <div class="col-6 C1 d-flex justify-content-center" >
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C1 d-flex justify-content-center">
           <p>1</p>
         </div>
         <!-- end of col -->
-
       </div>
       <!-- end of row -->
-      <div class="row d-flex justify-content-end">
-        <div class="col-6 C1 d-flex justify-content-center" >
-          <p>1</p>
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C2 d-flex justify-content-center">
+          <p>1 2</p>
         </div>
         <!-- end of col -->
-
       </div>
-
+      <!-- end of row -->
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C3 d-flex justify-content-center">
+          <p>One Two Three</p>
+        </div>
+        <!-- end of col -->
+      </div>
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C4 d-flex justify-content-center">
+          <p>One Two Three Four</p>
+        </div>
+        <!-- end of col -->
+      </div>
     </div>
     <!-- end of mid section -->
+    <!-- carousel -->
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="/Assets/JustDance.jpeg"
+            class="d-block w-100"
+            alt="justdancecarousel"
+          />
+        </div>
+        <div class="carousel-item">
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">
+                  With supporting text below as a natural lead-in to additional
+                  content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- end of carousel -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
