--- a/profile.html
+++ b/profile.html
@@ -13,20 +13,24 @@
     />
   </head>
   <body>
-        <div class="row">
-            <div class="d-flex justify-content-center">
-            <div class="col-4 d-flex justify-content-center align-items-center titleHeader">
-                <h1>Bootstrap Mini Quiz</h1>
-            </div>
+    <div class="row">
+      <div class="d-flex justify-content-center">
+        <div
+          class="col-4 d-flex justify-content-center align-items-center titleHeader"
+        >
+          <h1>Bootstrap Mini Quiz</h1>
         </div>
+      </div>
     </div>
     <!-- navbar -->
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link"  href="/index.html">Home</a>
+        <a class="nav-link" href="/index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active"  aria-current="page" href="/profile.html">Profile</a>
+        <a class="nav-link active" aria-current="page" href="/profile.html"
+          >Profile</a
+        >
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/contact.html">Contact</a>
@@ -34,10 +38,166 @@
     </ul>
     <!-- end of navbar -->
 
+    <!-- ptag -->
+    <div class="container-fluid">
+      <div class="row d-flex justify-content-start">
+        <div class="col">
+          <p>
+            Home Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it to make a type specimen book. It has
+            survived not only five centuries, but also the leap into electronic
+            typesetting, remaining essentially unchanged. It was popularised in
+            the 1960s with the release of Letraset sheets containing Lorem Ipsum
+            passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- end of ptag -->
+
+    <!-- cards -->
+    <div class="container-fluid mb-5">
+      <div class="row d-flex justify-content-center">
+        <!-- first card -->
+        <div class="col d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <img
+              src="Assets/JustDance.jpeg"
+              class="card-img-top"
+              alt="justdance"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title One</h5>
+              <p class="card-text">Quick Description Of something random</p>
+              <a href="#" class="btn btn-primary">Go Nowhere</a>
+            </div>
+          </div>
+        </div>
+        <!-- end of first card  -->
+
+        <!-- second card  -->
+        <div class="col d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <img
+              src="Assets/JustDance.jpeg"
+              class="card-img-top"
+              alt="justdance"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title One</h5>
+              <p class="card-text">Quick Description Of something random</p>
+              <a href="#" class="btn btn-primary">Go Nowhere</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- end of second card -->
+
+        <!-- third card  -->
+        <div class="col d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <img
+              src="Assets/JustDance.jpeg"
+              class="card-img-top"
+              alt="justdance"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title One</h5>
+              <p class="card-text">Quick Description Of something random</p>
+              <a href="#" class="btn btn-primary">Go Nowhere</a>
+            </div>
+          </div>
+        </div>
+        <!-- end of third card -->
+      </div>
+      <!-- end of row -->
+    </div>
+    <!-- end of cards -->
+
+    <!-- mid section -->
+    <div class="container-fluid">
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C1 d-flex justify-content-center">
+          <p>1</p>
+        </div>
+        <!-- end of col -->
+      </div>
+      <!-- end of row -->
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C2 d-flex justify-content-center">
+          <p>1 2</p>
+        </div>
+        <!-- end of col -->
+      </div>
+      <!-- end of row -->
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C3 d-flex justify-content-center">
+          <p>One Two Three</p>
+        </div>
+        <!-- end of col -->
+      </div>
+      <div class="row mb-2 d-flex justify-content-end">
+        <div class="col-6 C4 d-flex justify-content-center">
+          <p>One Two Three Four</p>
+        </div>
+        <!-- end of col -->
+      </div>
+    </div>
+    <!-- end of mid section -->
+
+    <!-- carousel -->
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="/Assets/JustDance.jpeg"
+            class="d-block w-100"
+            alt="justdancecarousel"
+          />
+        </div>
+        <div class="carousel-item">
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">
+                  With supporting text below as a natural lead-in to additional
+                  content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- end of carousel -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
-      ></script>
-    </body>
+    ></script>
+  </body>
 </html>
